# QM_RBM

./: CMakeLists.txt  DataHandler.py  QM_RBM.cpp  QM_RBM.h  README.md  analysis.py  csvHandler.h  dataModule.py  main.cpp  runtype.h  sampler.h  sampler_gd.cpp  sampler_gd.h  system.cpp  system.h
Hamiltonians/: InteractingOscillator.cpp  InteractingOscillator.h  ellipticOscillator.h  hamiltonian.h
Math/: random.h
Optimizer/: Adam.h  Optimizer.cpp  Optimizer.h  Sgd.h
Output/: CorrelatedGaussian_EllipticOscillator_.csv  CorrelatedGaussian_EllipticOscillator_HC_diameter_regular_Matrix.csv  CorrelatedGaussian_EllipticOscillator_HC_diameter_zero_Matrix.csv
QM_RBM/: .gitignore  Benchmark.h  CMakeLists.txt  DataHandler.py  QM_RBM.cpp  QM_RBM.h  README.md  csvHandler.h  dataModule.py  particle.cpp  particle.h  sampler.cpp  sampler.h  system.cpp  system.h
QM_RBM/Hamiltonians/: InteractingOscillator.cpp  InteractingOscillator.h  ellipticOscillator.cpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
QM_RBM/InitialStates/: randomuniform.cpp
QM_RBM/Optimizer/: Adam.cpp  Sgd.cpp
QM_RBM/Report/: main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.tex  main.toc  references.bib
QM_RBM/Results/: PlotReadMe.txt
QM_RBM/Selected_Runs/: README.md  README.txt
QM_RBM/WaveFunctions/: qnet.cpp  qnet.h  simplegaussian.cpp  simplegaussian.h  wavefunction.cpp  wavefunction.h
Report/: main.aux  main.bbl  main.lof  main.lot  main.out  main.tex  main.toc  references.bib
WaveFunctions/: correlatedGaussian.cpp  correlatedGaussian.h  qnet.h  simplegaussian_numerical.cpp  simplegaussian_numerical.h  wavefunction.h
